Interpret page and routing

--- a/src/Interprets.css
+++ b/src/Interprets.css
@@ -21,7 +21,7 @@
     cursor: pointer;
     border-radius: 10px;
     transition: 0.4s ease;
-
+    text-decoration: none;
 }
 .card-image {
     width: 90%;
@@ -30,6 +30,8 @@
 .card-title {
     margin-top: 0rem;
     place-self: center;
+    color: white;
+
 }
 
 .card-button {
