--- a/src/Nav.css
+++ b/src/Nav.css
@@ -74,6 +74,10 @@
     margin-block: 0.25rem;
     gap: 0.5rem;
 }
+.nav-logo-link, .nav-hidden-div {
+    text-decoration: none;
+    color: white;
+}
 .nav-logo > img {
     height: 5rem;
 }
