--- a/src/Nav.css
+++ b/src/Nav.css
@@ -10,8 +10,8 @@
 
 .nav-hidden {
     margin-top: 1rem; 
-    width: 90%;
-    margin-inline: 5%;
+    width: 50%;
+    margin-inline: 25%;
     box-sizing: border-box;
     background-color: #444444;
     border-radius: 10px;
@@ -19,7 +19,6 @@
     transform: translateY(-100%);
     transition: 0.5s;
     opacity: 0;
-    padding-top: 0.5rem;
     z-index: 1;
 }
 .nav-hidden.show {
@@ -180,6 +179,12 @@
         width: 50%;
     }
 }
+@media (max-width:860px) {
+    .nav-hidden {
+        width: 70%;
+        margin-inline: 15%;
+    }
+}
 @media (max-width: 768px) {
     
     .search-hidden {
@@ -187,6 +192,10 @@
     }
     .nav-hidden-div:first-child {
         place-content: center;
+    }
+    .nav-hidden {
+        width: 90%;
+        margin-inline: 5%;
     }
 }
 
@@ -223,9 +232,6 @@
     .nav-hidden-search {
         height: 3rem;
         width: 100%;
-    }
-    .nav-hidden {
-        gap: 0.5rem;
     }
     .search-div {
         opacity: 0;
