--- a/src/Interpret.css
+++ b/src/Interpret.css
@@ -2,11 +2,15 @@
     display: grid;
     grid-template-rows: 10rem calc(100% - 10rem);
 }
+::-webkit-scrollbar {
+    display: none;
+}
 .interpret-detail {
     margin: 0.5rem;
     display: flex;
     gap: 5%;
-    background: rgba(255, 255, 255, 0.048);
+    background: #ffffff0c;
+    box-shadow: 0 0 7px #adadad;
     border-radius: 1.5rem;
     background-size: 100% 150%;
     animation: backAnim 5s ease-in-out infinite;
@@ -30,6 +34,42 @@
     font-size: 3rem;
     transition: 0.3s;
 }
+
+
+.playlist {
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+}
+
+.playlist-item {
+    display: grid;
+    grid-template-columns: 2rem 3.5rem calc(100% - 5.5rem);
+    box-sizing: border-box;
+    padding: 0.5rem 0.5rem 0.5rem 1.5rem;
+    align-items: center;
+    gap: 1rem;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.playlist-item:hover {
+    background: #ffffff0c;
+}
+.playlist-item-order-number {
+    font-size: 1.2rem;
+}
+.playlist-item-title {
+    font-size: 1.4rem;
+}
+.playlist-item-title, .playlist-item-order-number {
+    margin: 0;
+}
+.playlist-item-img {
+    width: 3.5rem;
+}
+
+
+
 .control-panel {
     position: absolute;
 }
