--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   margin: 0;
-  background-color: #1b1b1b;
+  background-color: #f9f9f9;
   overflow: hidden;
 }
 
@@ -13,4 +13,22 @@
 .container {
   display: grid;
   grid-template-rows: 5.5rem calc(100% - 5.5rem);
+}
+.container.dark {
+  background: #1b1b1b;
+}
+
+.theme-button {
+  position: fixed;
+  top: 1.5rem;
+  right: 1.25rem;
+  width: 2.5rem;
+  z-index: 2;
+  cursor: pointer;
+}
+
+@media (max-width: 748px) { 
+  .theme-button {
+    right: 6rem;
+  }
 }
