--- a/src/Interpret.css
+++ b/src/Interpret.css
@@ -90,6 +90,49 @@
 
 .control-panel {
     position: absolute;
+    width: 100%;
+    height: 7rem;
+    display: grid;
+    grid-template-columns: 7rem 10rem calc(100% - 17rem);
+    align-items: center;
+}
+.control-panel-img {
+    width: 4.5rem;
+    height: 4.5rem;
+    padding: 1rem;
+}
+.control-panel.show   {
+    bottom:0;
+    background-color: #3a3a3a;
+}
+.control-panel-description > p {
+    margin-block: 0.5rem;
+}
+.control-panel-description > p:nth-child(1) {
+    font-size: 1.2rem;
+}
+.control-panel-description > p:nth-child(2) {
+    font-size: 0.9rem;
+}
+.control-icons-div {
+    width: 10rem;
+    margin-left: calc(50% - 17rem);
+    display: flex;
+    gap: 1rem;
+    box-sizing: border-box;
+}
+.control-icons-div > div {
+    width: 4rem;
+    aspect-ratio: 1/1;
+    background: #ffffff;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    cursor: pointer;
+}
+.control-icon {
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 @media (max-width:748px) {
@@ -104,6 +147,9 @@
         border-radius: 50%;
         margin: 0.5rem 1rem;
     }
+    .interpret-detail-favorite {
+        font-size: 1.8rem;
+    }
     .interpret-detail > h1 {
         font-size: 2rem;
     }
@@ -113,7 +159,13 @@
     .interpret-detail {
         gap: 0;
     }
+    .interpret-detail-favorite {
+        margin-inline: 1rem; 
+    }
     .interpret-detail > h1 {
         font-size: 1.5rem;
+    }
+    .playlist-item-title {
+        font-size: 1.1rem;
     }
 }
